Fix: reduce mobile recent issues to 2 (low res overlap), updated images

--- a/src/styles/IssueShort.module.css
+++ b/src/styles/IssueShort.module.css
@@ -8,3 +8,7 @@
 .Spacer {
   margin-left: 15px;
 }
+
+.Mobilebreak {
+  width: 115px;
+}
